# python-mikrotik-swos

./: .cspell.json  .gitignore  ANSIBLE.md  README.md  ansible.cfg  apply_config.yml  pyproject.toml  read_switch_config.py  switch_config.example.yml  swos_lite_api.py  test_config.yml
.github/workflows/: publish.yml
ansible/: swos.py  swos_lite.py
switch_code/: README.md
swos/: __init__.py  core.py  export_ansible_config.py  field_maps.py  swos_lite_map.py  swos_map.py
swos_lite/: __init__.py  read_switch_config.py
