[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "swos-lite"
dynamic = ["version"]
description = "Python library and tools for managing MikroTik SwOS Lite switches"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    {name = "SwOS Lite Contributors"}
]
keywords = ["mikrotik", "swos", "switch", "network", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/lanrat/swos-lite"
Repository = "https://github.com/lanrat/swos-lite"
Issues = "https://github.com/lanrat/swos-lite/issues"

[project.scripts]
swos-lite-config = "swos_lite.read_switch_config:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["swos_lite*"]

[tool.setuptools_scm]
